# file-encryptor-decryptor

./: .env.example  Cargo.toml  input.txt  readme.md
src/: main.rs
src/decryption/: mod.rs
src/encryption/: mod.rs
src/file_io/: mod.rs
