[package]
name = "file-encryptor-decryptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7"
block-modes = "0.8"
block-padding = "0.2"
rand = "0.8"  
generic-array = "0.14"
base64 = "0.13"
dotenv = "0.15.0"

